--- a/AltnCrossAPI.Shared/AltnCrossAPI.Shared.csproj
+++ b/AltnCrossAPI.Shared/AltnCrossAPI.Shared.csproj
@@ -95,7 +95,7 @@
     <Compile Include="ConfigHelper.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="CustomFilter.cs" />
+    <Compile Include="Filters.cs" />
     <Compile Include="General.cs" />
     <Compile Include="Logging\ILog.cs" />
     <Compile Include="Logging\Log.cs" />
