--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,7 @@ AltnCrossAPI/Properties/PublishProfiles/FolderProfile.pubxml.user
 AltnCrossAPI/obj/Release/TransformWebConfig/transformed/Web.config
 AltnCrossAPI/obj/Release/_WPPLastBuildInfo.txt
 AltnCrossAPI/MyLogs/2020-05-16-api.log
+AltnCrossAPI.BusinessLogic/bin/Release/AltNRegCLR.dll
+AltnCrossAPI.DataLogic/bin/Release/AltNRegCLR.dll
+AltnCrossAPI.BusinessLogic/bin/Debug/AltNRegCLR.dll
+AltnCrossAPI.DataLogic/bin/Debug/AltNRegCLR.dll
