--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,4 @@ AltnCrossAPI/obj/
 AltnCrossAPI/MyLogs/
 AltnCrossAPI.BusinessLogic/obj/
 AltnCrossAPI.DataLogic/obj/
+AltnCrossAPI.DataLogic/bin/
