--- a/AltnCrossAPI.DataLogic/AltnCrossAPI.DataLogic.csproj
+++ b/AltnCrossAPI.DataLogic/AltnCrossAPI.DataLogic.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
     <Compile Include="DBInteractions\DBHelper.cs" />
     <Compile Include="DBInteractions\RegKeys.cs" />
+    <Compile Include="DBInteractions\ShopifyProductVariants.cs" />
+    <Compile Include="DBInteractions\ShopifyProducts.cs" />
     <Compile Include="DBInteractions\Users.cs" />
     <Compile Include="DBInteractions\ShopifyData.cs" />
     <Compile Include="DBInteractions\ShopifyOrderAddresses.cs" />
@@ -55,12 +57,16 @@
     <Compile Include="DBInteractions\ShopifyOrders.cs" />
     <Compile Include="Interfaces\IDBHelper.cs" />
     <Compile Include="Interfaces\IRegKeys.cs" />
+    <Compile Include="Interfaces\IShopifyProductVariants.cs" />
+    <Compile Include="Interfaces\IShopifyProducts.cs" />
     <Compile Include="Interfaces\IUsers.cs" />
     <Compile Include="Interfaces\IShopifyData.cs" />
     <Compile Include="Interfaces\IShopifyOrderAddresses.cs" />
     <Compile Include="Interfaces\IShopifyOrderLineItems.cs" />
     <Compile Include="Interfaces\IShopifyOrders.cs" />
     <Compile Include="Models\RegKeyModel.cs" />
+    <Compile Include="Models\ShopifyProductVariantModel.cs" />
+    <Compile Include="Models\ShopifyProductModel.cs" />
     <Compile Include="Models\UsersModel.cs" />
     <Compile Include="Models\ShopifyDataModel.cs" />
     <Compile Include="Models\ShopifyOrderAddressModel.cs" />
