--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,4 @@ Altn.Service.Plugin.Shopify/bin/
 Altn.Service.Plugin.Shopify/obj/
 Altn.Service/bin/
 Altn.Service/obj/
+AltnCrossAPI/AltnCrossAPI.csproj.user
