--- a/Altn.Service/App.config
+++ b/Altn.Service/App.config
@@ -8,7 +8,7 @@
     <add key="SyncExistingProducts" value="true"/>
     <add key="ServiceName" value="Altn.Service"/>
     <add key="SyncInterval" value="1"/><!-- How often in (days) base job will run. -->
-    <add key="NumberOfDaysOld" value="2"/><!-- How many days older resources should be deleted. -->
+    <add key="NumberOfDaysOld" value="5"/><!-- How many days older custom variants should be deleted. -->
     <add key="ShopifyUrl" value="--Your Shopify Store URL--"/>
     <add key="ShopAccessToken" value="--Private App Secret--" />
     <add key="ShopWebhookSecret" value="--Webhook Secret--" />
